--- a/LLA.GUI/UserControls/WordsTable/WordsTable.xaml
+++ b/LLA.GUI/UserControls/WordsTable/WordsTable.xaml
@@ -1,9 +1,8 @@
-﻿<UserControl x:Class="LLA.GUI.UserControls.WordsTable"
+﻿<UserControl x:Class="LLA.GUI.WordsTable"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:LLA.GUI.UserControls"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
@@ -21,7 +20,7 @@
             </Setter>
         </Style>
     </UserControl.Resources>
-    <DataGrid x:Name="ctrl_WordsTable" Grid.Row="1" Grid.Column="1">
+    <DataGrid Name="ctrl_WordsTable" Grid.Row="1" Grid.Column="1">
         <DataGrid.CellStyle>
             <Style TargetType="{x:Type DataGridCell}">
                 <Style.Triggers>
@@ -48,5 +47,5 @@
                 </Style.Setters>
             </Style>
         </DataGrid.CellStyle>
-    </DataGrid>
+    </DataGrid>    
 </UserControl>
