--- a/LLA.GUI/UserControls/WordsTable/Dialogs/Word_CreateOrEdit.xaml
+++ b/LLA.GUI/UserControls/WordsTable/Dialogs/Word_CreateOrEdit.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="LLA.GUI.Dialogs.Words_Create"
+﻿<Window x:Class="LLA.GUI.Dialogs.Word_CreateOrEdit"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -20,20 +20,24 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto" MinHeight="50"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <Label Grid.Column="0" Grid.Row="0" Content="Написание:"/>
-                <TextBox Name="Ctrl_EngWriting" Grid.Column="1" Grid.Row="0" Margin="3" Text="{Binding Path=Word.Word_Eng}"/>
+                <TextBox Name="Ctrl_EngWriting" Grid.Column="1" Grid.Row="0" Margin="3" VerticalAlignment="Center"/>
+
+                <Label Grid.Column="0" Grid.Row="1" Content="Синонимы:"/>
+                <TextBox Name="Ctrl_Synonims" Grid.Column="1" Grid.Row="1" Margin="3" VerticalAlignment="Center"/>
+
+                <Label Grid.Column="0" Grid.Row="2" Content="Общепринятое произношение:" VerticalAlignment="Center"/>
+                <TextBox Name="Ctrl_EngSpeling" Grid.Column="1" Grid.Row="2" Margin="3" VerticalAlignment="Center"/>
                 
-                <Label Grid.Column="0" Grid.Row="1" Content="Общепринятое произношение:"/>
-                <TextBox Name="Ctrl_EngSpeling" Grid.Column="1" Grid.Row="1" Margin="3"/>
+                <Label Grid.Column="0" Grid.Row="3" Content="Произношение на UKR:"/>
+                <TextBox Name="Ctrl_EngSpelingByUkr" Grid.Column="1" Grid.Row="3" Margin="3" VerticalAlignment="Center"/>
                 
-                <Label Grid.Column="0" Grid.Row="2" Content="Произношение на UKR:"/>
-                <TextBox Name="Ctrl_EngSpelingByUkr" Grid.Column="1" Grid.Row="2" Margin="3"/>
-                
-                <Label Grid.Column="0" Grid.Row="3" Content="Произношение на RUS:"/>
-                <TextBox Name="Ctrl_EngSpelingByRus" Grid.Column="1" Grid.Row="3" Margin="3"/>
+                <Label Grid.Column="0" Grid.Row="4" Content="Произношение на RUS:"/>
+                <TextBox Name="Ctrl_EngSpelingByRus" Grid.Column="1" Grid.Row="4" Margin="3" VerticalAlignment="Center"/>
             </Grid>
         </GroupBox>
 
