--- a/LLA.GUI/Dialogs/Knowledge testing/KnowledgeTestDialog.xaml
+++ b/LLA.GUI/Dialogs/Knowledge testing/KnowledgeTestDialog.xaml
@@ -80,7 +80,7 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto" MinHeight="50"/>
+                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
